epoch gap support